# text-game

./: CMakeLists.txt  text_game.nimble
assets/: basic.frag  basic.vert  font.fnt  sdf.frag  sdf.vert
assets/fontwork/: convert.py  font.json  kerning.json
res/: resource.rc
src/: app.cpp  app.hpp  data.hpp  datafile.cpp  datafile.hpp  font.cpp  font.hpp  main.cpp  main.nim  main_old.cpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  shaders.cpp  shaders.hpp  taf.hpp  textures.cpp  textures.hpp  window.cpp  window.hpp  window.nim
