cmake_minimum_required(VERSION 3.16)

project(utg VERSION 0.1 LANGUAGES C CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(SDL_VULKAN OFF CACHE BOOL "" FORCE)
set(SDL_RENDER_VULKAN OFF CACHE BOOL "" FORCE)

set(SDL_DIRECTX OFF CACHE BOOL "" FORCE)
set(SDL_RENDER_D3D OFF CACHE BOOL "" FORCE)
set(SDL_RENDER_D3D11 OFF CACHE BOOL "" FORCE)
set(SDL_RENDER_D3D12 OFF CACHE BOOL "" FORCE)

set(SDL_OPENGL ON CACHE BOOL "" FORCE)
set(SDL_RENDER_GL OFF CACHE BOOL "" FORCE)

set(SDL_TEST_LIBRARY OFF CACHE BOOL "" FORCE)
set(SDL_EXAMPLES OFF CACHE BOOL "" FORCE)
set(SDL_SHARED ON CACHE BOOL "" FORCE)
set(SDL_STATIC OFF CACHE BOOL "" FORCE)

set(SDL_RENDER_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_GPU_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_CAMERA_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_JOYSTICK_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_HAPTIC_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_HIDAPI_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_POWER_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_SENSOR_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_TRAY_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_RENDER_GPU OFF CACHE BOOL "" FORCE)

add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)

add_executable(utg
    src/main.cpp
)

target_link_libraries(utg PRIVATE SDL3::SDL3)