cmake_minimum_required(VERSION 3.16)

project(utg VERSION 0.1 LANGUAGES C CXX RC)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(SRC_FILES
    main.cpp

    shaders.hpp
    shaders.cpp

    textures.hpp
    textures.cpp
)

set(SDL_VULKAN OFF CACHE BOOL "" FORCE)
set(SDL_RENDER_VULKAN OFF CACHE BOOL "" FORCE)

set(SDL_DIRECTX OFF CACHE BOOL "" FORCE)
set(SDL_RENDER_D3D OFF CACHE BOOL "" FORCE)
set(SDL_RENDER_D3D11 OFF CACHE BOOL "" FORCE)
set(SDL_RENDER_D3D12 OFF CACHE BOOL "" FORCE)

set(SDL_OPENGL ON CACHE BOOL "" FORCE)
set(SDL_RENDER_GL OFF CACHE BOOL "" FORCE)

set(SDL_TEST_LIBRARY OFF CACHE BOOL "" FORCE)
set(SDL_EXAMPLES OFF CACHE BOOL "" FORCE)
set(SDL_SHARED ON CACHE BOOL "" FORCE)
set(SDL_STATIC OFF CACHE BOOL "" FORCE)

set(SDL_RENDER_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_GPU_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_CAMERA_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_JOYSTICK_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_HAPTIC_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_HIDAPI_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_POWER_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_SENSOR_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_TRAY_DEFAULT OFF CACHE BOOL "" FORCE)
set(SDL_RENDER_GPU OFF CACHE BOOL "" FORCE)

add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)

list(TRANSFORM SRC_FILES PREPEND ${CMAKE_CURRENT_SOURCE_DIR}/src/)

add_executable(utg
    ${SRC_FILES}
    vendored/glad/src/gl.c
    $<$<BOOL:${WIN32}>:res/resource.rc>
)

target_include_directories(utg PRIVATE 
    vendored/glad/include
    vendored/stb
)

target_link_libraries(utg PRIVATE SDL3::SDL3)

if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
    set_target_properties(utg PROPERTIES
        WIN32_EXECUTABLE TRUE
        MSVC_RUNTIME_LIBRARY "MultiThreaded"
    )
else()
    target_compile_definitions(utg PRIVATE DEBUG)
endif()